# methane-super-emitters

./: README.md  pyproject.toml
.github/workflows/: pdoc.yml
data/: background.tar  extra_2024.csv  extra_2025.csv  sea_locations.csv
data/dataset/negative/: 000ef890-ccf3-4865-89a4-3e56d27cbead.npz  001c875d-cdc0-4c92-b7c3-52e164f0b3d8.npz  0028a02a-5c28-44f5-9673-3a0f3bfd819d.npz  002b304f-abc1-4c6c-9da3-be590bb77314.npz  0073a90b-ef6d-4654-9961-7ede85143f0c.npz  009d64c6-8da3-4887-b5d6-fc4fa5f805cc.npz  00a30992-627d-40e9-866b-c3919fdb5204.npz  00b0a31a-e3db-48c6-89a6-8aedc904eec0.npz  00ca3e46-129f-4fde-ba7e-4769e909ea9e.npz  00da8ca5-6306-4a2a-add5-1fcd16fff763.npz  00e728cf-7a35-466f-829d-748db2dc2e58.npz  00f0dec3-a33a-45ab-a1ce-e0ea360ec9d7.npz  00f54f0d-69d4-470a-bb41-dc610f3b29ef.npz  01129780-2123-4f8c-8b1e-426d7b6962e7.npz  011e7fac-266b-4d25-b891-6146b25c6da9.npz  012d953f-ec69-419d-9192-52e5bddbdb55.npz  0184d50b-ed17-4278-8271-b8124b9fafe3.npz  018bacaa-479a-44a3-9a1a-5c3c4754be41.npz  01980ec0-b2da-40d1-b414-9a6e35d46091.npz  0198d19f-490b-4175-8c54-e7c134a946e1.npz  01be27f5-6e7d-43b1-ab57-aad9fe434b08.npz  0244115b-9d40-434b-a942-b89579952035.npz  02549c54-d115-4f70-b441-d062a4a78678.npz  (+3069 more)
src/methane_super_emitters/: cam.py  convert.py  create_dataset.py  create_dataset_negative.py  datamodule.py  dataset.py  dataset_stats.py  dataset_visualize.py  emitter_distance.py  examine_locations.py  model.py  optimize.py  predict.py  show.py  train.py  train_locate.py  utils.py  visualize.py  windfield.py
test/: test_main.py
(+637 files in other folders)
